--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+
+.jnr {
+    display: block;
 }
 
 .profile-card {
@@ -96,4 +101,3 @@
 }
 
 /* Footer */
-
